[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/the_park/the_park.gd" type="Script" id=1]
[ext_resource path="res://scenes/parkgoer.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/the_park/GUI.gd" type="Script" id=4]
[ext_resource path="res://assets/BlueButton.png" type="Texture" id=5]
[ext_resource path="res://scenes/the_park/ground.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/dog/dog.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/menues/GameMenu.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Kenney Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = SubResource( 1 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="ground" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1029, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.299524, 0.954089, 0, -0.954089, 0.299524, 0, 82, 66 )
shadow_enabled = true

[node name="parkgoer" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.22408, 0, -2.95003 )

[node name="parkgoer2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.8655, 0, 4.35303 )

[node name="parkgoer3" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.50816, 0, -6.8726 )

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="HUD" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.943909
margin_top = 0.943878
margin_right = -0.943909
margin_bottom = 0.943848
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GUI/HUD"]
anchor_right = 1.0
margin_left = -178.0
margin_right = -178.0
margin_bottom = 43.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GUI/HUD/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -16.5
margin_right = 102.0
margin_bottom = 17.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/HUD/TextureRect/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/HUD/TextureRect/Panel/HBoxContainer"]
margin_right = 117.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = " You  caught:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NR" type="Label" parent="GUI/HUD/TextureRect/Panel/HBoxContainer"]
margin_left = 121.0
margin_right = 204.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 7
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="GUI/HUD"]
anchor_right = 1.0
margin_left = 442.0
margin_right = -178.0
margin_bottom = 43.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GUI/HUD/TextureRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -16.5
margin_right = 102.0
margin_bottom = 17.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/HUD/TextureRect2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/HUD/TextureRect2/Panel/HBoxContainer"]
margin_right = 114.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = " Dog caught"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DogNR" type="Label" parent="GUI/HUD/TextureRect2/Panel/HBoxContainer"]
margin_left = 118.0
margin_right = 204.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 7
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/HUD"]
margin_right = 230.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GUI/HUD/HBoxContainer"]
margin_right = 113.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Time Left"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTimeLabel" type="Label" parent="GUI/HUD/HBoxContainer"]
margin_left = 117.0
margin_right = 230.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "60"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreatCounter" type="HBoxContainer" parent="GUI/HUD"]
margin_left = 790.0
margin_right = 1020.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GUI/HUD/TreatCounter"]
margin_right = 123.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Treats Left"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreatCountLabel" type="Label" parent="GUI/HUD/TreatCounter"]
margin_left = 127.0
margin_right = 230.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameMenu" parent="GUI" instance=ExtResource( 9 )]
visible = false

[node name="dog" parent="." instance=ExtResource( 8 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -4.81398, 0.796733, 0 )
rotation_factor = 7.5

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="dog_caught_frisbee" from="dog" to="GUI" method="_on_dog_dog_caught_frisbee"]
[connection signal="timeout" from="Timer" to="GUI" method="_on_Timer_timeout"]
